--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
             <div class="list1">
                 <div class="header">
-                    <h2 style="color: white;">Top New Releases</h2>
+                    <h2 style="color: white;">Trending</h2>
                     <i class="bi bi-chevron-right">
                         <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="white"
                             class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -506,14 +506,14 @@
                         <tr>
                             <td>
                                 <div class="all">
-                                    <div class="img img1">
+                                    <div class="img img11">
 
                                     </div><br>
                                     <div class="sub">
                                         <bs>Basic Game</bs>
                                     </div><br>
                                     <div class="head">
-                                        <heading>EA SPORTS FC 24 STANDERD EDITION</heading>
+                                        <heading>Zenless Zone Zoro</heading>
                                     </div>
                                     <div class="price">
                                         <Table>
@@ -521,15 +521,15 @@
                                                 <td>
                                                     <div class="offer">
                                                         <div class="offerbox">
-                                                            <center>-80%</center>
+                                                            <center>-100%</center>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="cutout"><del><doller>$ 19.9<doller></del></div>
+                                                    <div class="cutout"><del><doller>$ 20.9<doller></del></div>
                                                 </td>
                                                 <td>
-                                                    <div class="rate"> $ 15.2</div>
+                                                    <div class="rate"> Free</div>
                                                 </td>
                                             </tr>
                                         </Table>
@@ -538,30 +538,19 @@
                             </td>
                             <td>
                                 <div class="all">
-                                    <div class="img img2"></div><br>
+                                    <div class="img img21"></div><br>
                                     <div class="sub">
                                         <bs>Basic Game</bs>
                                     </div><br>
                                     <div class="head">
-                                        <heading>Horizon Forbidden West Complete Edition</heading>
+                                        <heading>Flintlock: The Siege of Dawn</heading>
                                     </div>
                                     <div class="price">
                                         <Table>
                                             <tr>
+                                                
                                                 <td>
-                                                    <div class="offer">
-                                                        <div class="offerbox">
-                                                            <div class="offerbox">
-                                                                <center>-50%</center>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                                <td>
-                                                    <div class="cutout"><del><doller>$ 100.4<doller></del></div>
-                                                </td>
-                                                <td>
-                                                    <div class="rate">$ 50.2</div>
+                                                          <div class="rate">$ 169</div>
                                                 </td>
                                             </tr>
                                         </Table>
@@ -570,12 +559,12 @@
                             </td>
                             <td>
                                 <div class="all">
-                                    <div class="img img3"></div><br>
+                                    <div class="img img31"></div><br>
                                     <div class="sub">
                                         <bs>Basic Game</bs>
                                     </div><br>
                                     <div class="head">
-                                        <heading>Crosshair X</heading>
+                                        <heading>Dungeons of Hunterberg</heading>
                                     </div>
                                     <div class="price">
                                         <Table>
@@ -584,16 +573,16 @@
                                                     <div class="offer">
                                                         <div class="offerbox">
                                                             <div class="offerbox">
-                                                                <center>-25%</center>
+                                                                <center>-20%</center>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="cutout"><del><doller>$ 20<doller></del></div>
+                                                    <div class="cutout"><del><doller>$ 899<doller></del></div>
                                                 </td>
                                                 <td>
-                                                    <div class="rate">$ 5</div>
+                                                    <div class="rate">$ 719.2</div>
                                                 </td>
                                             </tr>
                                         </Table>
@@ -602,12 +591,12 @@
                             </td>
                             <td>
                                 <div class="all">
-                                    <div class="img img4"></div><br>
+                                    <div class="img img41"></div><br>
                                     <div class="sub">
                                         <bs>Basic Game</bs>
                                     </div><br>
                                     <div class="head">
-                                        <heading>Suicide Squad</heading>
+                                        <heading>Sker Ritual</heading>
                                     </div>
                                     <div class="price">
                                         <Table>
@@ -616,16 +605,16 @@
                                                     <div class="offer">
                                                         <div class="offerbox">
                                                             <div class="offerbox">
-                                                                <center>-70%</center>
+                                                                <center>-10%</center>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="cutout"><del><doller>$ 30<doller></del></div>
+                                                    <div class="cutout"><del><doller>$ 1549<doller></del></div>
                                                 </td>
                                                 <td>
-                                                    <div class="rate">$ 8</div>
+                                                    <div class="rate">$ 1394.10</div>
                                                 </td>
                                             </tr>
                                         </Table>
@@ -634,12 +623,12 @@
                             </td>
                             <td>
                                 <div class="all">
-                                    <div class="img img5"></div><br>
+                                    <div class="img img51"></div><br>
                                     <div class="sub">
                                         <bs>Basic Game</bs>
                                     </div><br>
                                     <div class="head">
-                                        <heading>Earth Defence Force 6</heading>
+                                        <heading>XDefiant</heading>
                                     </div>
                                     <div class="price">
                                         <Table>
@@ -652,10 +641,10 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="cutout"><del><doller>$ 40<doller></del></div>
+                                                    <div class="cutout"><del><doller>$ 400<doller></del></div>
                                                 </td>
                                                 <td>
-                                                    <div class="rate"> $ 20</div>
+                                                    <div class="rate"> $ 200</div>
                                                 </td>
                                             </tr>
                                         </Table>
@@ -664,12 +653,12 @@
                             </td>
                             <td>
                                 <div class="all">
-                                    <div class="img img6"></div><br>
+                                    <div class="img img61"></div><br>
                                     <div class="sub">
                                         <bs>Basic Game</bs>
                                     </div><br>
                                     <div class="head">
-                                        <heading>EA SPORTS FC 24 STANDERD EDITION</heading>
+                                        <heading>Empires of the UnderGround</heading>
                                     </div>
                                     <div class="price">
                                         <Table>
@@ -687,7 +676,7 @@
                                                     <div class="cutout"><del><doller>$ 100<doller></del></div>
                                                 </td>
                                                 <td>
-                                                    <div class="rate">$ 10</div>
+                                                    <div class="rate">$ 90</div>
                                                 </td>
                                             </tr>
                                         </Table>
